[package]
name = "blockfrost"
version = "1.0.3"
edition = "2021"
keywords = ["blockfrost", "blockchain", "cardano", "ipfs", "nft"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies"]
description = "A Rust SDK for Blockfrost.io API"
license = "Apache-2.0"
repository = "https://github.com/blockfrost/blockfrost-rust"
homepage = "https://blockfrost.io"

[dependencies]
blockfrost-openapi = { version = "0.0.3" }
futures = "0.3.30"
reqwest = { version = "0.12.7", default-features = false, features = [
  "http2",
  "charset",
  "macos-system-configuration",
  "multipart",
  "json",
] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.128"
paste = "1.0.15"
toml = "0.8.12"
url = "2.5.2"
thiserror = "1.0.64"

[dev-dependencies]
async-trait = "0.1.83"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
