[package]
name = "blockfrost"
version = "1.2.1"
edition = "2021"
keywords = ["blockfrost", "blockchain", "cardano", "ipfs", "nft"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies"]
description = "A Rust SDK for Blockfrost.io API"
license = "Apache-2.0"
repository = "https://github.com/blockfrost/blockfrost-rust"
homepage = "https://blockfrost.io"

[dependencies]
blockfrost-openapi = "0.1.83"
futures = "0.3.31"
futures-timer = "3.0.3"
reqwest = { version = "0.12.9", default-features = false, features = [
    "http2",
    "charset",
    "macos-system-configuration",
    "multipart",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"
thiserror = "2.0.17"

[dev-dependencies]
httpmock = "0.8.2"
rstest = "0.26.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]

[lints.clippy]
uninlined_format_args = "deny"
